src/style/Home/body.scss
.section-1 {
    min-height: 100vh;
}
.homepage-body {
    background: url(../../assets/images/INSTA.svg),
        url(../../assets//images/RAISE.svg), var(--gradient-background);
    background-repeat: no-repeat;
    background-position: 60%, 70%;
    background-position-y: 28%, 60%;
    min-height: 85vh;
}

.btn-color-mode {
    background-image: var(--button-background-color);
    border: 1px solid var(--button-background-color);
}
.vl {
    border-left: 1px solid #d0b3fe;
    margin-left: 3px;
    height: 20vh;
}
.homepage-body-socials img {
    cursor: pointer;
    padding: 0.5rem 0rem;
    margin-left: -7px;
}
.homepage-body-description h1 {
    color: #ffffff;
    line-height: 130%;
    letter-spacing: 0.2px;
}
.text-aileron-bold {
    font-family: Aileron-Bold;
    font-size: 60px;
}
.homepage-body-description-bodypara {
    color: #ffffff;
    letter-spacing: 0.2px;
}
.font-insta-regular {
    font-family: font-Regular;
}
.descPara {
    color: var(--descPara-color);
}
.vlb {
    border-left: 3px solid #a97bed;
}
.homepage-body-description .btn {
    padding: 8px 24px;
}
.homepage-body-description .btn span {
    color: var(--body-button-color);
    font-size: 18px;
    font-weight: 550;
    letter-spacing: 0.2px;
    line-height: 130%;
}
.cen {
    margin-top: 10vh;
}
@media (max-width: 991px) {
    .homepage-body {
        background: var(--gradient-background);
    }
    .homepage-body-description h1 {
        font-size: 40px;
    }
}
@media (min-width: 500px) and (max-width: 991px) {
    .cen {
        margin-top: 25vh;
    }
}

